Modificacion metodos setMinutos y setSegundos de la clase Disco

--- a/ExamenEDD/pom.xml
+++ b/ExamenEDD/pom.xml
@@ -50,5 +50,17 @@
             <scope>test</scope>
             <version>4.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
